root/css/main.css
/* ... */
div#page h1 a, h1{
    padding: 0;
    margin:0;
    color:gray;
}

div#page p {
    font-style:italic;
    color:gray;
    padding:0;
    margin:0;
}

div#page .release_date { }

/* user warnings */
.caveat-emptor {
    font-style:italic;
    color:gray;
}


/*********************************
   
   Sections
   
*********************************/
section.widget .primary-container {
    padding:0.5em 0.5em 1.5em 0.5em;
    margin:2px;
    margin-bottom:10px;
    overflow:hidden;
    border:1px solid gray;    
    position:relative;
}

section.widget .widget-container {
    padding:0.5em 0.5em 1.5em 0.5em;
    margin:0 0.8em 0.8em 0;
    overflow:hidden;
    display:none;
    background-color:#FFFFFF; 
    position:relative;
}

section.widget header h3 {
    margin:0px;
    padding:0.5em 0;
    margin-bottom:0.5em;
    border-bottom:1px dotted gray;
    height:1em;
    cursor:pointer;
/*     border:1px solid green; */
}

section.widget header h3.minimized{
    border:0;
    margin:0;
    padding:0.5em 0 0 0;
}

section.widget footer {
    font-size:0.9em;    
    position:absolute;
    bottom:0.5em;
    right:0.5em;
    opacity:0.8;
}

section.widget header div.ui-icon-large {
  float:right;
  opacity:0.3;
  cursor:pointer;
}

section.widget header h3 div.module-min {
  float:left;
  opacity:0.3;
  margin:3px;
/*   border:1px solid red; */
}

/* These are subfields - NOT IN USE? */
section.widget .secondary-container {

}

/*********************************
   
   Per-Page styling
   
*********************************/

/* A list of available views */
div#content #available-views {
    color:black;
    overflow:hidden;
    position:absolute;
    bottom:0.5em;
    right:1em;
    font-size:0.8em;
}

/* =========================================
   FOOTER ================================== */

div#footer{
	color: #878787;
    padding: 1.2em 0 0.4em 0;
    margin:0;
	font-size:0.8em;
    border-top: 1px solid #BCC;
    overflow:auto;
    position:absolute;
    width:100%;
    bottom:0px;
}

#footer, #spacer {
    clear:both;
    height: 6.8em;
}


#footercredit {
    text-align: left;
    float: left;
    overflow:hidden;
    margin-left:1.4em;
}

#footermeta {
    text-align: right;
    float: right;
    overflow:hidden;
    margin-right: 1em;
}

/*********************************

         REPORTS

*********************************/

/* Formatting for the main index page */
/* These should be things like container instead */
div.page_listing {
    padding-bottom:5px;
    margin-bottom:2px;
    text-align:left;
    /*    border-bottom:1px dotted gray; */
}

div.widget_listing {
    margin-left:30px;
    text-align:left;
}



/* Formatting for the debug index page */
div.debug-widget-title {
    font-size:1.4em;
    padding-bottom:5px;
    margin-bottom:2px;
    margin-top:15px;
    text-align:left;
    border-bottom:1px dotted gray;
}

div.debug-field-list {
    margin-left:15px;
}

.debug-field-list .field-name {
    text-align:right;
    padding-right:15px;
    width:300px;
}

.debug-field-list p.generic a {
    color:gray;
    font-style:italic;    
}

.debug-field-list p.common a {
    color:gray;
    font-style:italic;
}

.debug-field-list p.custom a {
    color:red; 
    font-style:italic;
}

p.debug-view {
    font-family:Courier;
    font-size:0.8em;
}

.description {
   font-style:italic;
}



#returned-data {
    font-family:Courier;
    width:800px;
    padding:25px;
    background:#FFFFCC;
    border:1px solid black;
    display:none;
}

.returned-data {
    font-family:Courier;
    width:800px;
    padding:25px;
    background:#FFFFCC;
    border:1px solid black;
    display:none;
}

.returned {
   display:none;
   background:#EEE;
   margin-top:5px;
   padding:5px;
   padding-right:10px;
}

.superscript      { vertical-align:super; 
                    font-size:0.8em;
                  }


/*********************************

           WIDGETS
 
   ********************************* */
div.widget {
    padding:1px;
    margin:2px;
/*    border:1px dotted gray; */
    background-color:seafoam;
}

/* The widget title bar. This needs to be a div so I can 
   target it for widget controls like toggle, drag, etc.

   On the other hand, these titles should maybe just be
   structural elements such as H1. DIVs and SPANs
   that lack presentational information, but styled with classes
   can be confusing.
*/
div.widget .title {
    border-bottom:1px solid black;
    padding:3px 0px 3px 6px;
    background-color:#BCC;
    text-transform:uppercase;
}

/* Links to download widgets in a variety of formats */
div.downloadable-formats {
    float:right;
    font-size:0.9em;    
}

.title {
    overflow:hidden;
    padding:1em;
    position:relative;
  background-color:#CDCDCD;
}
.title h2 {
    padding:0;
    margin:0;
    float:left;
}


/* Formatting for the debug index page */
div.widget-section-header {
    padding-bottom:5px;
    margin-bottom:2px;
    margin-top:15px;
    text-align:left;
    border-bottom:1px dotted gray;
}




/* CURRENTLY LIVE: Added by boilerplate/field */

/* widget field titles: ie Identification > IDs */
div.field {
/*   clear:both; */
  line-height:1.1em;
  padding:0.2em;
  height:1%;
  overflow:hidden;
}

div.field h5 {
  float:left;
  width:8em;
  text-align:right;
  margin-top:0em;   /* Pitch default h2 margin and force top alignment with p content */
}

div.field-title {
  float        : left;
  text-align   : right; 
  font-size    : 1.1em;
  padding-right: 0.8em;
  width        : 12em;
  height       : auto;
}

div.field-content {
  overflow:hidden;
}


/* Subfields - structure mimics that of fields */
div.subfield { 
    clear:both;
    margin-left:0em;
}
div.subfield h6 {   
    float:left;
    width:10em;
    text-align:right;
    margin-top:0em;   // Force top alignment with content even though we're an h element
}

div.subfield p {
    margin-left:1em;
}
/* ... */

